force-app/main/default/objects/Timetrack_Entry__c/Timetrack_Entry__c.object-meta.xml
<CustomObject>
    <label>Time Track Entry</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Time Track Entries</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>