force-app/main/default/objects/Timetrack_Entry__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Time Track Entries</relationshipLabel>
    <relationshipName>Time_Track_Entries</relationshipName>
    <type>Lookup</type>
</CustomField>