force-app/main/default/objects/Timetrack_Entry__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Category</label>
    <referenceTo>Timetrack_Category__c</referenceTo>
    <relationshipLabel>Time Track Entries</relationshipLabel>
    <relationshipName>Time_Track_Entries</relationshipName>
    <type>Lookup</type>
</CustomField>