force-app/main/default/objects/Timetrack_Entry__c/fields/Duration__c.field-meta.xml
<CustomField>
    <fullName>Duration__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Duration of the task in millisecods</inlineHelpText>
    <label>Duration (ms)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>