force-app/main/default/objects/Timetrack_Entry__c/fields/Duration_Hours__c.field-meta.xml
<CustomField>
    <fullName>Duration_Hours__c</fullName>
    <formula>IF(ISBLANK(Duration__c),0,Duration__c / (60 * 60 * 1000))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total time for the entry in hours</inlineHelpText>
    <label>Duration (hours)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>