force-app/main/default/objects/Timetrack_Entry__c/fields/Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Record_Id__c</fullName>
    <description>Used to associate the record with other entities, which will be solved in apex</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Record Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>