force-app/main/default/objects/Timetrack_Entry__c/fields/Stopwatch_Start__c.field-meta.xml
<CustomField>
    <fullName>Stopwatch_Start__c</fullName>
    <label>Stopwatch Start</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>