force-app/main/default/objects/Timetrack_Entry__c/listViews/My_Time_Track_Entries.listView-meta.xml
<ListView>
    <fullName>My_Time_Track_Entries</fullName>
    <columns>NAME</columns>
    <columns>Category__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Completed__c</columns>
    <filterScope>Mine</filterScope>
    <label>My Time Track Entries</label>
</ListView>